// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestPlugin Emulator builds a url for emulator proxy via webpack 1`] = `
Object {
  "endpoint": "/proxy",
  "headers": Object {
    "x-ms-proxy-target": "http://localhost",
  },
  "path": "/dbs/foo",
}
`;

exports[`requestPlugin Hosted builds a proxy URL in development 1`] = `
Object {
  "endpoint": "/proxy",
  "headers": Object {
    "x-ms-proxy-target": "baz",
  },
  "path": "/dbs/foo",
}
`;
